--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ syllabus: http://babakbehkamkia.github.io/course_template/syllabus/
 githubdir: 
 
 # Author/user information
-email: instructor-first-name@iust.ac.ir
-twitter_username: broken_twitter 
-github_username:  broken_github
-authorurl: "http://borken-url.github.io"
+email: h_rahmani_AT_iust.ac.ir
+# twitter_username:  
+# github_username:  broken_github
+# authorurl: "http://borken-url.github.io"
 address: |
     School of Computer Engineering
     Iran University of Science and Technology
