--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: |
     Instructor: Dr.Hossein Rahmani
 
 message: #Please register to our Google <a href="https://groups.google.com/forum/#!forum/gp-id">groups page</a> to get course notifications via email.
-baseurl: "/course_template" # the subpath of your site, e.g. /blog/
-url: "http://babakbehkamkia.github.io/course_template" # the base hostname & protocol for your site
-syllabus: http://babakbehkamkia.github.io/course_template/syllabus/
+baseurl: "/Data_Structure" # the subpath of your site, e.g. /blog/
+url: "http://babakbehkamkia.github.io/Data_Structure" # the base hostname & protocol for your site
+syllabus: http://babakbehkamkia.github.io/Data_Structure/syllabus/
 githubdir: 
 
 # Author/user information
