--- a/_data/people.yml
+++ b/_data/people.yml
@@ -6,4 +6,6 @@ teaching_assistants:
 #  - name: Amir Mohammad Ehsandar
 #    profile_pic: /_images/avatar.png    
 
-    
+ - name: Hossein Hosseinpor
+
+ - name: Seyed Hossein Nasiri
