--- a/_data/people.yml
+++ b/_data/people.yml
@@ -7,6 +7,6 @@ teaching_assistants:
 #    profile_pic: /_images/avatar.png    
 
  - name: Hossein Hosseinpor
-  profile_pic: /_images/avatar.png 
+  profile_pic: /_images/avatar2.png 
 
  - name: Seyed Hossein Nasiri
